# job

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  ENHANCEMENTS.md  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  PROMPTS.md  README.md  SETUP.md  SYSTEM_FEATURES.md  cli.py  config.py  main.py  pyproject.toml  test_profile.py
collectors/: __init__.py  base.py  github.py  linkedin.py  naukri.py  wellfound.py  ycombinator.py
core/: __init__.py  engine.py  models.py
enrichment/: __init__.py  email_finder.py  profile_analyzer.py  profile_report.py
intelligence/: __init__.py  decider.py  llm.py  scorer.py
observability/: circuit_breaker.py  logger.py  metrics.py  notifier.py
outreach/: __init__.py  composer.py  email_validator.py  resume_handler.py  sender.py
storage/: csv_store.py  sqlite_store.py
