[project]
name = "job-intelligence-os"
version = "1.0.0"
description = "Autonomous job application automation system"
requires-python = ">=3.11"
authors = [
    {name = "Your Name", email = "your-email@gmail.com"}
]
dependencies = [
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.6.0",
    "rich>=13.7.0",
    "playwright>=1.42.0",
    "pandas>=2.2.0",
    "dnspython>=2.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[project.scripts]
jobctl = "cli:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["core", "collectors", "intelligence", "enrichment", "outreach", "storage", "observability"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
